# TalentMindAI

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  deployment_guide.md  docker-compose.yml  package.json  rank.py  submission_metadata.yaml  test_candidates_50.jsonl
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/scripts/: analyze_candidate.py  analyze_job.py  build_candidate_graph.py  build_embeddings.py  build_evidence_graph.py  build_intent.py  candidate_summary.py  career_analysis.py  check_dataset_status.py  compare_candidates.py  count_candidates.py  count_candidates_safe.py  dashboard_stats.py  explain_candidate.py  export_results.py  generate_report.py  generate_top_100_csv.py  import_uploaded_dataset.py  init_db.py  inspect_jobs.py  list_jobs.py  load_dataset.py  preprocess.py  read_first_jsonl.py  rebuild_cache.py  rebuild_index.py  rerank.py  reset_all.py  run_ranking.py  search.py  validate_dataset.py  vector_stats.py  verify_candidate.py
backend/tests/: conftest.py  test_candidate_agent.py  test_candidate_api.py  test_config.py  test_dataset_api.py  test_deployment.py  test_document_parser.py  test_embedding_cache.py  test_embeddings.py  test_evidence_agent.py  test_evidence_api.py  test_explainability.py  test_explainability_api.py  test_extractor.py  test_feature_engineer.py  test_health.py  test_job_agent.py  test_jobs_api.py  test_logging.py  test_normalizer.py  test_orchestrator.py  test_performance.py  test_performance_candidate.py  (+11 more)
(+120 files in other folders)
