[tool.poetry]
name = "talentmind-ai-backend"
version = "0.1.0"
description = "FastAPI Backend for TalentMind AI Candidate Intelligence Platform"
authors = ["TalentMind AI Engineering <engineering@talentmind.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
structlog = "^24.2.0"
python-dotenv = "^1.0.1"
psutil = "^5.9.8"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
python-multipart = "^0.0.32"
sentence-transformers = "^3.0.1"
faiss-cpu = "^1.8.0"
numpy = "^1.26.4"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
black = "^24.4.2"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
